--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 
 .contenedor_header{
-    padding: 20px 20px 0 20px;
+    padding: 10px 20px 0 20px;
     font-weight: bold;
     font-size: 40px;
     text-align: center;
@@ -25,39 +25,58 @@ h1{
 }
 
 .contenedor_main_visible{
-    display: none;
-    margin: 30px 0;
+    display: none;  /*DISPLAY NONE PROVISIONAL*/
+    margin: 30px 0 25px 0;
     
 }
 /*--------------CONTENIDO INVISIBLE---------------*/
 
 
 .contenedor_main_invisible_yes{
+    
+    margin: 15px;
+    padding: 10px;
     border: 3px solid #5f5f5f;
     background-color: black;
 }
 
 .titulo_invisible_yes{
-    font-size: 25px;
+    font-size: 30px;
     font-weight: bold;
     text-align: center;
     color: darkgreen;
+    margin-bottom: 15px;
 }
 
 .texto_invisible_yes{
+    font-weight: bold;
+    color: darkgreen;
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 22px;
+}
 
+.lista_materias{
+    color: darkgreen;
+}
+
+.lista_materias li{
+    margin-left: 30px;
+    margin-bottom: 9px;
+    font-size: 18px;
+    font-weight: bold;
 }
 /*^^^^^^^^^CONTENIDO INVISIBLE ARRIBA^^^^^^^*/
 
 
 .imagen_main{
     text-align: center;
-    margin: 20px 0;
+    margin: 0 0 15px 0;
 
 }
 
 #imagen_main{
-    width: 40%;
+    width: 38%;
 }
 
 .botones_main{
@@ -108,6 +127,7 @@ h1{
 }
 
 .contenedor_footer{
+    
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 50px;
@@ -120,4 +140,12 @@ h1{
     margin-bottom: 10px;
     color: green;
     
+}
+
+.copyright_footer{
+    margin-top: 8px;
+    font-weight: bold;
+    margin: bottom 8px;
+    color: green;
+
 }
