--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1{
 }
 
 .contenedor_main_visible{
-    display: none;  /*DISPLAY NONE PROVISIONAL*/
+     /*DISPLAY NONE PROVISIONAL*/
     margin: 30px 0 25px 0;
     
 }
@@ -33,7 +33,7 @@ h1{
 
 
 .contenedor_main_invisible_yes{
-    
+    display:none;
     margin: 15px;
     padding: 10px;
     border: 3px solid #5f5f5f;
@@ -54,6 +54,33 @@ h1{
     text-align: center;
     margin-bottom: 10px;
     font-size: 22px;
+}
+
+.botones_mensaje{
+
+    text-align: center;
+}
+
+#telegram_boton{
+    width: 100px;
+    transition: transform 0.3s;
+}
+
+#telegram_boton:hover{
+    transform: scale(1.2);
+    cursor: pointer;
+}
+
+#whatsapp_boton{
+    width: 55px;
+    margin-bottom: 4px;
+    transition: transform 0.3s;
+    
+}
+
+#whatsapp_boton:hover{
+    transform: scale(1.2);
+    cursor: pointer;
 }
 
 .lista_materias{
@@ -108,6 +135,11 @@ h1{
 
 #yes_button:hover{
     transform: scale(1.2);
+    cursor: pointer;
+}
+#yes_button:active{
+
+    background: darkred;
 }
 
 
@@ -124,6 +156,10 @@ h1{
 
 #no_button:hover{
     transform: scale(1.2);
+    cursor: pointer;
+}
+#no_button:active{
+    background: darkgreen;
 }
 
 .contenedor_footer{
