--- a/style.css
+++ b/style.css
@@ -218,3 +218,45 @@ h1{
     color: green;
 
 }
+
+/*-------------RESPONSIVE CELULAR------------------*/
+
+@media only screen and (max-width:481px) {
+
+    body{
+        width: 100%;
+    }
+
+    .contenedor_header{
+
+        margin-top: 30px;
+    }
+
+    .contenedor_global{
+
+        margin: auto;
+    }
+
+    .imagen_main{
+        margin-top: 50px;
+        margin-bottom: 50px;
+
+    }
+
+    #imagen_main{
+
+        width: 300px;
+    }
+
+    .botones_main{
+
+        margin-bottom: 50px;
+    }
+
+}
+
+
+/*--------------RESPONSIVE TABLET------------------*/
+@media only screen and (min-width: 769px) and (max-width: 1024px){
+    
+}
